src/objects/Int_Agreement_Party__c.object
<CustomObject>
    <description>Int Agreement Party</description>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Agreements Parties</relationshipLabel>
        <relationshipName>Int_Agreements_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Party Name</description>
        <label>Party Name</label>
        <referenceTo>Int_Party__c</referenceTo>
        <relationshipLabel>Int Agreements Parties</relationshipLabel>
        <relationshipName>Int_Agreements_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Party Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Role_Type_Code__c</fullName>
        <description>Party Role Type Code</description>
        <label>Party Role Type Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Source_System__c</fullName>
        <description>Party Source System</description>
        <label>Party Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Int Agreement Party</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Name__c</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Agreement_Source_System__c</columns>
        <columns>Committed__c</columns>
        <columns>Party_Name__c</columns>
        <columns>Party_Number__c</columns>
        <columns>Party_Role_Type_Code__c</columns>
        <columns>Party_Source_System__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>API-{0000000000}</displayFormat>
        <label>Agreement Party Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>